[project]
name = "asyncsftp"
description = "Asynchronous SFTP upload/download utilities using asyncssh."
readme = "README.md"
authors = [
    { name = "Guillaume Mougeot", email = "guillaume.mougeot@laposte.net" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dynamic = ["version"]

dependencies = [
    "asyncssh>=2.14.0",
    "typing-extensions; python_version<'3.8'"
]

[project.urls]
Homepage = "https://github.com/GuillaumeMougeot/asyncsftp"
Repository = "https://github.com/GuillaumeMougeot/asyncsftp"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]